--- a/main.css
+++ b/main.css
@@ -1,55 +1,72 @@
-/* Reset some default styles */
+/* Styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-/* Style for the header wrapper */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    color: #fff;
+}
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    border: 1px solid #3b3d49;
+    margin-right: 200px;    
+}
+.btn:hover {
+    background-color: #3c4855;
+}
 .header-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #555;
+    background-color:#2a2c39;
     padding: 10px 20px;
 }
 
-/* Style for the logo */
+
 .header-wrapper .logo img {
     height: 80px;
-    width: auto;
     margin-left: 150px;
 }
 
-/* Style for the header navigation */
+
 .header-nav {
     list-style: none;
     display: flex;
 }
 
-/* Style for each navigation link */
+
 .header-nav li {
-    margin-left: 20px;
+    margin-left: 25px;
 }
 
-/* Style for the links */
+
 .header-nav a {
     text-decoration: none;
-    color: #fff;
+    color: #ccc;
     font-size: 18px;
     font-family: Arial, sans-serif;
+    font-weight: bold;
     padding: 10px 15px;
     transition: background-color 0.3s ease;
 }
 
-/* Hover effect for navigation links */
+
 .header-nav a:hover {
-    background-color: #555;
+    color: #fff;
     border-radius: 5px;
 }
 
 .home-section {
-    background-color: #2a2c39;
+    background-color: #262734;
 }
 
 .home-wrapper {
@@ -58,29 +75,35 @@
     color:#fff;
     padding: 10px 20px;
     margin-left: 180px;
-    margin-right: 170px;
+    margin-right: 110px;
    }
 
 .home-content .home-title {
-        margin-top: 60px;
-        font-size: 80px;
-        margin-bottom: 40px;
-    }
+    margin-top: 60px;
+    font-size: 80px;
+    margin-bottom: 40px;
+}
 .home-content .home-names {   
-        letter-spacing: 0;
-        font-size: 80px;
-        line-height: 1px;
-        margin-bottom: 60px;
-    }
+    letter-spacing: 0;
+    font-size: 80px;
+    line-height: 1px;
+    margin-bottom: 60px;
+}
+.home-content a {
+    margin-top: 50px;
+    margin-left: 110px;
+    
+}
 .home-portrait {
         margin-top: 70px ;
    }
-.h1,h2,h3,h4,h5,h6 {
+h1,h2,h3 {
     font-family: "Cormorant Garamond", serif;
 }
 
 .about-section{
     background-color: black;
+    
 }
 .about-wrapper {
     
@@ -105,26 +128,43 @@
     margin-left: 150px;
 
 }
-.container {
-    padding: 20px;
+.about-wrapper a {
+    margin-top: 10px;
+    margin-left: 200px;
+    
 }
-.project-wrapper{
+.project-section {
+    background-color: #262734;
+}
+.project-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     margin: 0 auto;
     max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
 }
-
+.project-title h1 {
+    font-size: 60px;
+    margin-bottom: 15px;
+    margin-left: 50px;
+}
+.project-title p {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+    margin-left: 50px;
+}
 .project-card {
-    background-color: #222;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    border-radius: 50px;
+    box-shadow: 0 15px #2a2c34;
+    background-color: #2a2c39;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    margin: 10px;
 }
 
 .project-card h2 {
@@ -133,18 +173,28 @@
 }
 
 .project-card p {
-    font-size: 1rem;
+    font-size: 0.9rem;
     margin-bottom: 20px;
     color: #ccc;
 }
+.project-card img {
+   height: 200px;
+   margin-bottom: 20px;
+}
 
 .github-link img {
+    margin-top: 20px;
     width: 30px;
     height: 30px;
 }
 
 .github-link {
     text-decoration: none;
+}
+.row {
+   
+    display: flex;
+    flex-direction: row;    
 }
 .contact-section {
     display: flex;
