--- a/main.css
+++ b/main.css
@@ -196,6 +196,7 @@ h1,h2,h3 {
     align-items: center;
     display: flex;
     flex-direction:column;
+   
 }
 .skills-content {
     width: 80%;
@@ -204,6 +205,7 @@ h1,h2,h3 {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin-bottom: 40px;
 }
 
 .title {
@@ -254,7 +256,7 @@ h1,h2,h3 {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 40px 20px;
+    padding: 50px 20px;
     max-width: 1200px;
     margin: 0 auto;
     gap: 40px;
@@ -339,7 +341,7 @@ h1,h2,h3 {
 
 footer{
     text-align: center;
-    padding: 25px 0;
+    padding: 20px 0;
     border-top: 1px solid #444;
     font-size: 20px;    
 }
